[package]
name = "cargo-buttplug"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/vmfunc/cargo-buttplug"
description = "A cargo subcommand for controlling buttplug devices"
license = "MIT"
exclude = [
    "assets/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.83"
async-std = "1.12.0"
buttplug = "7.1.16"
futures = "0.3.30"
tokio = "1.37.0"
